# hxr

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  bin__file__read_8h.html  bin__file__read_8h.js  bin__file__read_8h__dep__incl.map  bin__file__read_8h__dep__incl.md5  bin__file__read_8h__incl.map  bin__file__read_8h__incl.md5  bin__file__read_8h_source.html  classBinFileRead-members.html  classBinFileRead.html  classBinFileRead.js  classBinFileRead__coll__graph.map  classBinFileRead__coll__graph.md5  classEval-members.html  classEval.html  classEval.js  classEval__coll__graph.map  classEval__coll__graph.md5  classSentenceGenerator-members.html  classSentenceGenerator.html  classSentenceGenerator.js  classSentenceGenerator__coll__graph.map  classSentenceGenerator__coll__graph.md5  classcommon_1_1Logger-members.html  classcommon_1_1Logger.html  classcommon_1_1Logger.js  classcommon_1_1ScopedLog-members.html  classcommon_1_1ScopedLog.html  classcommon_1_1ScopedLog.js  classconverters_1_1Hexer-members.html  classconverters_1_1Hexer.html  classconverters_1_1Hexer.js  classconverters_1_1Hexer__coll__graph.map  (+189 more)
.github/ISSUE_TEMPLATE/: custom.md  feature_request.md
.github/workflows/: main.yml  pull_request.yml
common/: CMakeLists.txt
common/include/: CMakeLists.txt  common.h
common/src/: CMakeLists.txt
common/src/colourprint/: CMakeLists.txt  colourprint.cpp  colourprint.h
common/src/converters/: CMakeLists.txt  bin_file_read.h  converters.cpp  converters.h  eval.cpp  eval.h  type_list.h
common/src/logger/: CMakeLists.txt  logger.cpp  logger.h
common/test/: CMakeLists.txt
common/test/test_common_include/: CMakeLists.txt  test_common_include.cpp
main/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+41 more)
test/cli/: test_smoke_tests.py
